--- a/src/html/_sniper.html
+++ b/src/html/_sniper.html
@@ -137,12 +137,8 @@
           </div>
 
           <div class="filters-page__footer">
-            <button type="reset" class="filters-page__btn-reset">
-              <img src="./img/icons/btn-reset.svg" alt="reset icon">
-              <span>Reset</span>
-            </button>
-
-            <button type="button" class="filters-page__btn btn"><span>Apply</span></button>
+            <button type="button" class="filters-page__btn filters-page__btn--full btn"><span>Start
+                Sniping</span></button>
           </div>
         </form>
       </div>
