--- a/src/html/_wallet-manager.html
+++ b/src/html/_wallet-manager.html
@@ -144,7 +144,7 @@
 
 
 <div class="modal" id="withdraw-wallet">
-  <div class="modal-content">
+  <div class="modal-content modal-content--fit-content">
     <button class="close-modal-btn">&times;</button>
 
     <div class="modal__inner">
