--- a/src/start.html
+++ b/src/start.html
@@ -15,7 +15,7 @@
     <!-- @@include('./html/_header.html') -->
 
     <!-- Main Page -->
-    <main>
+    <main class="main--not-padding">
       <div class="start">
         <div class="start__inner">
           <div class="start__rows">
