added desktop view

--- a/src/html/_filters-head-pump-vision.html
+++ b/src/html/_filters-head-pump-vision.html
@@ -1,7 +1,7 @@
 <div class="filters-head">
   <form action="#" class="filters-head__form">
     <div class="filters-head__row">
-      <div class="filters-head__icons">
+      <div class="filters-head__icons desktop-dn">
         <!-- если добавить класс active то иконка покраситься -->
         <button type="button" class="filters-head__btn filters-head__btn--watchlist">
           <img width="16" height="16" src="./img/icons/watchlist.svg" alt="watchlist icon">
@@ -13,7 +13,7 @@
 
       <div class="filters-head__actions">
         <div class="filters-head__action">
-          <button type="button" class="filters-head__action-btn"><span>Filters</span></button>
+          <button type="button" class="filters-head__action-btn desktop-dn"><span>Filters</span></button>
         </div>
 
         <div class="filters-head__action">
@@ -22,13 +22,14 @@
       </div>
     </div>
 
-    <div class="filters-head__row">
+    <div class="filters-head__row filters-head__row--full">
       <div class="filters-head__naming heading">
         <h1 class="filters-head__name heading__title">Pump Vision</h1>
         <img width="16" height="16" src="./img/icons/Pump Vision.svg" alt="icon">
       </div>
 
       <div class="filters-head__input-wrapper">
+        <p class="filters-head__input-text">Quick Buy</p>
         <input class="filters-head__input" type="number" value="1000">
         <div class="filters-head__input-icon">$</div>
       </div>
