--- a/src/html/_filters-head-token-explorer.html
+++ b/src/html/_filters-head-token-explorer.html
@@ -1,4 +1,4 @@
-<div class="filters-head">
+<div class="filters-head filters-head-token-explorer desktop-dn">
   <form action="#" class="filters-head__form">
     <div class="filters-head__row">
       <div class="filters-head__naming heading">
