--- a/src/html/_filters-head.html
+++ b/src/html/_filters-head.html
@@ -1,6 +1,6 @@
 <div class="filters-head">
   <form action="#" class="filters-head__form">
-    <div class="filters-head__actions">
+    <div class="filters-head__actions desktop-dn">
       <div class="filters-head__action">
         <button type="button"
           class="filters-head__action-btn filters-head__action-btn--not-border filters-head__action-btn--large active"><span>Deposit</span>
@@ -15,7 +15,7 @@
     </div>
 
     <div class="filters-head__row">
-      <div class="filters-head__icons">
+      <div class="filters-head__icons  desktop-dn">
         <!-- если добавить класс active то иконка покраситься -->
         <button type="button" class="filters-head__btn filters-head__btn--watchlist">
           <img width="16" height="16" src="./img/icons/watchlist.svg" alt="watchlist icon">
@@ -27,7 +27,8 @@
 
       <div class="filters-head__actions">
         <div class="filters-head__action">
-          <button type="button" class="filters-head__action-btn"><span>Filters</span></button>
+          <button type="button" class="filters-head__action-btn open-modal-btn"
+            data-modal-id="filters-modal"><span>Filters</span></button>
         </div>
 
         <div class="filters-head__action">
@@ -96,13 +97,14 @@
       <div class="slider-pagination"></div>
     </div>
 
-    <div class="filters-head__row">
+    <div class="filters-head__row filters-head__row--full">
       <div class="filters-head__naming heading">
         <h1 class="filters-head__name heading__title">New Pairs</h1>
         <img width="16" height="16" src="./img/icons/New Pairs.svg" alt="icon">
       </div>
 
       <div class="filters-head__input-wrapper">
+        <p class="filters-head__input-text">Quick Buy</p>
         <input class="filters-head__input" type="number" value="1000">
         <div class="filters-head__input-icon">$</div>
       </div>
