--- a/src/html/_main-table.html
+++ b/src/html/_main-table.html
@@ -7,9 +7,35 @@
             <p>Token</p>
           </div>
         </th>
+
+        <th class="mobile-dn">
+          <button type="button" class="table__filter">
+            <p>Created</p>
+            <img width="8" src="./img/icons/table-filter-tringle.svg" alt="tringle icon">
+          </button>
+        </th>
+
+        <th class="mobile-dn">
+          <div class="table__relative">
+            <button type="button" class="table__filter">
+              <p>Liquidity</p>
+              <img width="8" src="./img/icons/table-filter-tringle.svg" alt="tringle icon">
+            </button>
+          </div>
+        </th>
+
+        <th class="mobile-dn">
+          <div class="table__relative">
+            <button type="button" class="table__filter">
+              <p>Liquidity</p>
+              <img width="8" src="./img/icons/table-filter-tringle.svg" alt="tringle icon">
+            </button>
+          </div>
+        </th>
+
         <th>
           <div class="table__relative">
-            <button type="button" class="table__left-btn">
+            <button type="button" class="table__left-btn desktop-dn">
               <img width="6" src="./img/icons/left-tringle.svg" alt="left-tringle icon">
             </button>
             <button type="button" class="table__filter">
@@ -18,12 +44,28 @@
             </button>
           </div>
         </th>
+
         <th>
           <button type="button" class="table__filter">
             <p>Swaps</p>
             <img width="8" src="./img/icons/table-filter-tringle.svg" alt="tringle icon">
           </button>
         </th>
+
+        <th class="mobile-dn">
+          <button type="button" class="table__filter">
+            <p>Volume</p>
+            <img width="8" src="./img/icons/table-filter-tringle.svg" alt="tringle icon">
+          </button>
+        </th>
+
+        <th class="mobile-dn">
+          <button type="button" class="table__filter">
+            <p>Audit Report</p>
+            <img width="8" src="./img/icons/table-filter-tringle.svg" alt="tringle icon">
+          </button>
+        </th>
+
         <th>
           <div class="table__head">
             <p>Quick Buy</p>
@@ -48,7 +90,11 @@
           </div>
         </td>
 
-        <td>
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
           <div class="table__column-direction">
             <p class="table__bold-text">$ 5,200.56</p>
             <div class="table__percents green-text">
@@ -57,61 +103,9 @@
             </div>
           </div>
         </td>
-        <td>
-          <p>95</p>
-        </td>
-        <td>
-          <button type="button" class="outline-btn outline-btn--mini">Buy</button>
-        </td>
-      </tr>
 
-      <tr>
-        <td colspan="2">
-          <div class="table__info table__row-direction">
-            <div class="table__info-token">
-              <img width="36" height="36" src="./img/tokens/Cryptocurrency.svg" alt="Cryptocurrency icon">
-
-              <img class="table__info-exchange" width="16" height="16" src="./img/tokens/binance.svg"
-                alt="binance icon">
-            </div>
-            <div class="table__inf-text">
-              <p class="table__bold-text">BTC</p>
-              <p>Bitcoin</p>
-            </div>
-          </div>
-        </td>
-
-        <td>
-          <div class="table__column-direction">
-            <p class="table__bold-text">$ 5,200.56</p>
-            <div class="table__percents orange-text">
-              <img width="16" height="16" src="./img/icons/percent-bottom.svg" alt="percent-top icon">
-              <p>-5,7%</p>
-            </div>
-          </div>
-        </td>
-        <td>
-          <p>95</p>
-        </td>
-        <td>
-          <button type="button" class="outline-btn outline-btn--mini">Buy</button>
-        </td>
-      </tr>
-
-      <tr>
-        <td colspan="2">
-          <div class="table__info table__row-direction">
-            <div class="table__info-token">
-              <img width="36" height="36" src="./img/tokens/Cryptocurrency.svg" alt="Cryptocurrency icon">
-
-              <img class="table__info-exchange" width="16" height="16" src="./img/tokens/binance.svg"
-                alt="binance icon">
-            </div>
-            <div class="table__inf-text">
-              <p class="table__bold-text">BTC</p>
-              <p>Bitcoin</p>
-            </div>
-          </div>
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -123,14 +117,22 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
-
       <tr>
         <td colspan="2">
           <div class="table__info table__row-direction">
@@ -145,6 +147,24 @@
               <p>Bitcoin</p>
             </div>
           </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
+          <div class="table__column-direction">
+            <p class="table__bold-text">$ 5,200.56</p>
+            <div class="table__percents orange-text">
+              <img width="16" height="16" src="./img/icons/percent-bottom.svg" alt="percent-top icon">
+              <p>-5,7%</p>
+            </div>
+          </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -156,14 +176,22 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
-
       <tr>
         <td colspan="2">
           <div class="table__info table__row-direction">
@@ -178,6 +206,24 @@
               <p>Bitcoin</p>
             </div>
           </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
+          <div class="table__column-direction">
+            <p class="table__bold-text">$ 5,200.56</p>
+            <div class="table__percents green-text">
+              <img width="16" height="16" src="./img/icons/percent-top.svg" alt="percent-top icon">
+              <p>+4,5%</p>
+            </div>
+          </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -189,14 +235,22 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
-
       <tr>
         <td colspan="2">
           <div class="table__info table__row-direction">
@@ -211,6 +265,24 @@
               <p>Bitcoin</p>
             </div>
           </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
+          <div class="table__column-direction">
+            <p class="table__bold-text">$ 5,200.56</p>
+            <div class="table__percents orange-text">
+              <img width="16" height="16" src="./img/icons/percent-bottom.svg" alt="percent-top icon">
+              <p>-5,7%</p>
+            </div>
+          </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -222,14 +294,22 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
-
       <tr>
         <td colspan="2">
           <div class="table__info table__row-direction">
@@ -244,6 +324,24 @@
               <p>Bitcoin</p>
             </div>
           </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
+          <div class="table__column-direction">
+            <p class="table__bold-text">$ 5,200.56</p>
+            <div class="table__percents green-text">
+              <img width="16" height="16" src="./img/icons/percent-top.svg" alt="percent-top icon">
+              <p>+4,5%</p>
+            </div>
+          </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -255,14 +353,22 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
-
       <tr>
         <td colspan="2">
           <div class="table__info table__row-direction">
@@ -277,6 +383,24 @@
               <p>Bitcoin</p>
             </div>
           </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
+          <div class="table__column-direction">
+            <p class="table__bold-text">$ 5,200.56</p>
+            <div class="table__percents orange-text">
+              <img width="16" height="16" src="./img/icons/percent-bottom.svg" alt="percent-top icon">
+              <p>-5,7%</p>
+            </div>
+          </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -288,14 +412,22 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
-
       <tr>
         <td colspan="2">
           <div class="table__info table__row-direction">
@@ -310,6 +442,24 @@
               <p>Bitcoin</p>
             </div>
           </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
+          <div class="table__column-direction">
+            <p class="table__bold-text">$ 5,200.56</p>
+            <div class="table__percents green-text">
+              <img width="16" height="16" src="./img/icons/percent-top.svg" alt="percent-top icon">
+              <p>+4,5%</p>
+            </div>
+          </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -321,14 +471,22 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
-
       <tr>
         <td colspan="2">
           <div class="table__info table__row-direction">
@@ -343,6 +501,24 @@
               <p>Bitcoin</p>
             </div>
           </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
+          <div class="table__column-direction">
+            <p class="table__bold-text">$ 5,200.56</p>
+            <div class="table__percents orange-text">
+              <img width="16" height="16" src="./img/icons/percent-bottom.svg" alt="percent-top icon">
+              <p>-5,7%</p>
+            </div>
+          </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -354,14 +530,22 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
-
       <tr>
         <td colspan="2">
           <div class="table__info table__row-direction">
@@ -376,6 +560,24 @@
               <p>Bitcoin</p>
             </div>
           </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
+          <div class="table__column-direction">
+            <p class="table__bold-text">$ 5,200.56</p>
+            <div class="table__percents green-text">
+              <img width="16" height="16" src="./img/icons/percent-top.svg" alt="percent-top icon">
+              <p>+4,5%</p>
+            </div>
+          </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -387,14 +589,22 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
-
       <tr>
         <td colspan="2">
           <div class="table__info table__row-direction">
@@ -409,6 +619,24 @@
               <p>Bitcoin</p>
             </div>
           </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>1m</p>
+        </td>
+
+        <td class="mobile-dn">
+          <div class="table__column-direction">
+            <p class="table__bold-text">$ 5,200.56</p>
+            <div class="table__percents orange-text">
+              <img width="16" height="16" src="./img/icons/percent-bottom.svg" alt="percent-top icon">
+              <p>-5,7%</p>
+            </div>
+          </div>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
         </td>
 
         <td>
@@ -420,79 +648,23 @@
             </div>
           </div>
         </td>
+
         <td>
           <p>95</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>$0</p>
+        </td>
+
+        <td class="mobile-dn">
+          <p>http://surl.li/qrwhjx</p>
         </td>
         <td>
           <button type="button" class="outline-btn outline-btn--mini">Buy</button>
         </td>
       </tr>
 
-      <tr>
-        <td colspan="2">
-          <div class="table__info table__row-direction">
-            <div class="table__info-token">
-              <img width="36" height="36" src="./img/tokens/Cryptocurrency.svg" alt="Cryptocurrency icon">
-
-              <img class="table__info-exchange" width="16" height="16" src="./img/tokens/binance.svg"
-                alt="binance icon">
-            </div>
-            <div class="table__inf-text">
-              <p class="table__bold-text">BTC</p>
-              <p>Bitcoin</p>
-            </div>
-          </div>
-        </td>
-
-        <td>
-          <div class="table__column-direction">
-            <p class="table__bold-text">$ 5,200.56</p>
-            <div class="table__percents green-text">
-              <img width="16" height="16" src="./img/icons/percent-top.svg" alt="percent-top icon">
-              <p>+4,5%</p>
-            </div>
-          </div>
-        </td>
-        <td>
-          <p>95</p>
-        </td>
-        <td>
-          <button type="button" class="outline-btn outline-btn--mini">Buy</button>
-        </td>
-      </tr>
-
-      <tr>
-        <td colspan="2">
-          <div class="table__info table__row-direction">
-            <div class="table__info-token">
-              <img width="36" height="36" src="./img/tokens/Cryptocurrency.svg" alt="Cryptocurrency icon">
-
-              <img class="table__info-exchange" width="16" height="16" src="./img/tokens/binance.svg"
-                alt="binance icon">
-            </div>
-            <div class="table__inf-text">
-              <p class="table__bold-text">BTC</p>
-              <p>Bitcoin</p>
-            </div>
-          </div>
-        </td>
-
-        <td>
-          <div class="table__column-direction">
-            <p class="table__bold-text">$ 5,200.56</p>
-            <div class="table__percents orange-text">
-              <img width="16" height="16" src="./img/icons/percent-bottom.svg" alt="percent-top icon">
-              <p>-5,7%</p>
-            </div>
-          </div>
-        </td>
-        <td>
-          <p>95</p>
-        </td>
-        <td>
-          <button type="button" class="outline-btn outline-btn--mini">Buy</button>
-        </td>
-      </tr>
     </tbody>
   </table>
 </div>
