--- a/src/html/_pump-vision.html
+++ b/src/html/_pump-vision.html
@@ -2,9 +2,27 @@
   <div class="tab">
     <div class="tab__head">
       <div class="tab__btns">
-        <button type="button" class="tab__btn active" data-tab-btn="New Creations">New Creations</button>
-        <button type="button" class="tab__btn" data-tab-btn="About to Graduate">About to Graduate</button>
-        <button type="button" class="tab__btn" data-tab-btn="Graduate">Graduate</button>
+        <button type="button" class="tab__btn active" data-tab-btn="New Creations">
+          <span>New Creations</span>
+          <div class="filters-head__action mobile-dn">
+            <div class="filters-head__action-btn"><span>Filters</span></div>
+          </div>
+        </button>
+
+        <button type="button" class="tab__btn" data-tab-btn="About to Graduate">
+          <span>About to Graduate</span>
+          <div class="filters-head__action mobile-dn">
+            <div class="filters-head__action-btn"><span>Filters</span></div>
+          </div>
+        </button>
+
+        <button type="button" class="tab__btn" data-tab-btn="Graduate">
+          <span>Graduate</span>
+          <div class="filters-head__action mobile-dn">
+            <div class="filters-head__action-btn"><span>Filters</span></div>
+          </div>
+        </button>
+
       </div>
     </div>
     <div class="tab__contents">
