--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -8,8 +8,28 @@
     </div>
 
     <div class="header__right">
-      <div class="header__notifications">
-        <img class="header__notifications-icon" width="16" height="16" src="./img/icons/notif.svg" alt="notif icon">
+      <div class="header__actions">
+        <button type="button" class="header__action">
+          <img class="header__action-icon" width="16" height="16" src="./img/icons/notif.svg" alt="notif icon">
+        </button>
+
+        <div class="header__action mobile-dn">
+          <button type="button" class="header__action">
+            <img class="header__action-icon" width="16" height="16" src="./img/icons/watchlist.svg"
+              alt="watchlist icon">
+          </button>
+        </div>
+
+        <div class="header__action mobile-dn">
+          <button type="button" class="header__action">
+            <img class="header__action-icon" width="16" height="16" src="./img/icons/positions.svg"
+              alt="positions icon">
+          </button>
+        </div>
+      </div>
+
+      <div class="header__account mobile-dn">
+        <input class="header__account-input" type="text" placeholder="Name" value="@johnjonson">
       </div>
 
       <div class="burger">
@@ -18,7 +38,7 @@
     </div>
   </div>
 
-  <nav class="nav">
+  <nav class="nav mobile-nav">
     <ul class="nav__list">
       <li class="nav__item active">
         <a class="nav__link" href="#">
