added new view for desktop version

--- a/src/html/_filters-head-settings.html
+++ b/src/html/_filters-head-settings.html
@@ -1,6 +1,6 @@
 <div class="filters-head">
   <form action="#" class="filters-head__form">
-    <div class="filters-head__row filters-head__row--justify">
+    <div class="filters-head__row filters-head__row--full filters-head__row--justify">
       <div class="filters-head__naming heading">
         <h1 class="filters-head__name heading__title">Settings</h1>
         <img width="16" height="16" src="./img/icons/Settings green.svg" alt="icon">
