--- a/src/html/_filters-head-terminal.html
+++ b/src/html/_filters-head-terminal.html
@@ -1,6 +1,6 @@
-<div class="filters-head">
+<div class="filters-head filters-head--terminal">
   <form action="#" class="filters-head__form">
-    <div class="filters-head__row">
+    <div class="filters-head__row filters-head__row--full">
       <div class="table__info table__row-direction">
         <div class="table__info-token">
           <img width="36" height="36" src="./img/tokens/Cryptocurrency.svg" alt="Cryptocurrency icon">
@@ -20,6 +20,33 @@
         <div class="table__percents green-text">
           <img width="16" height="16" src="./img/icons/percent-top.svg" alt="percent-top icon">
           <p>+4,5%</p>
+        </div>
+      </div>
+
+      <div class="terminal__blocks terminal__blocks--desktop mobile-dn">
+        <div class="terminal__block">
+          <p class="terminal__block-text">Price</p>
+          <p class="terminal__block-sum">$0.0₉3363</p>
+        </div>
+
+        <div class="terminal__block">
+          <p class="terminal__block-text">Mkt Cap</p>
+          <p class="terminal__block-sum">$0.03363</p>
+        </div>
+
+        <div class="terminal__block">
+          <p class="terminal__block-text">Liquidity</p>
+          <p class="terminal__block-sum">$0.003904</p>
+        </div>
+
+        <div class="terminal__block">
+          <p class="terminal__block-text">FDV</p>
+          <p class="terminal__block-sum">$0.003904</p>
+        </div>
+
+        <div class="terminal__block">
+          <p class="terminal__block-text">B.Curve</p>
+          <p class="terminal__block-sum">$0.003904</p>
         </div>
       </div>
 
