--- a/src/html/_settings.html
+++ b/src/html/_settings.html
@@ -436,14 +436,14 @@
             <!-- <div class="filters-page__broder"></div> -->
           </div>
 
-          <!-- <div class="filters-page__footer">
+          <div class="filters-page__footer">
             <button type="reset" class="filters-page__btn-reset">
               <img src="./img/icons/btn-reset.svg" alt="reset icon">
               <span>Reset</span>
             </button>
 
             <button type="button" class="filters-page__btn btn"><span>Apply</span></button>
-          </div> -->
+          </div>
         </form>
       </div>
     </div>
